--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "ethereumjs-util": "^5.2.0",
+    "merkle-tree-solidity": "^1.0.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -55,7 +57,8 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^1.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "scrypt": "^6.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
